Use lombok plugin instead of manual configuration
Signed-off-by: Project_HSI <projecthsi@outlook.com>